# VSpec

./: Cargo.toml  specs.db
docs/mcp/phase-1/: README.md
docs/mcp/phase-2/: README.md
docs/mcp/phase-3/: README.md
docs/mcp/phase-4/: README.md
src/: app.rs  main.rs  observability.rs
src/infrastructure/persistence/: db.rs  mod.rs  project.rs  spec.rs
src/presentation/: mod.rs
src/presentation/http/: routes.rs
src/presentation/mcp/: server.rs
